fix: build deprecations, ability to override kotlin + jvm targets
Signed-off-by: Sam Gammon <sam@elide.ventures>